Show overflow inside dialogs; Fix a minor styling snafu

--- a/src/styles/dialogs.scss
+++ b/src/styles/dialogs.scss
@@ -38,7 +38,7 @@
     inset: 0;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow: visible;
     position: fixed;
     // Unfortunately, if you want animation, you'll have to put up with this.
     z-index: 999999;
@@ -71,6 +71,7 @@
         padding: 8px;
         border-bottom: 1px solid var(--ipl-input-color);
         background-color: var(--ipl-bg-secondary);
+        border-radius: constants.$border-radius-outer constants.$border-radius-outer 0 0;
 
         > :deep(.ipl-dialog-title) {
             padding: 0 8px;
@@ -82,6 +83,7 @@
         padding: 8px;
         border-top: 1px solid var(--ipl-input-color);
         background-color: var(--ipl-bg-secondary);
+        border-radius: 0 0 constants.$border-radius-outer constants.$border-radius-outer;
     }
 
     > .content {
